Project rentcar {
  database_type: "PostgreSQL"
  Note: "RentCar monolithic backend schema"
}

Enum user_role {
  customer
  admin
  super_admin
}

Enum car_status {
  available
  rented
  maintenance
  inactive
}

Enum rental_status {
  requested
  approved
  rejected
  pending_payment
  confirmed
  active
  cancelled
  completed
}

Enum payment_method {
  cash
  card
  bank_transfer
}

Enum payment_status {
  pending
  paid
  failed
  refunded
}

Enum invoice_status {
  issued
  paid
  void
}

Enum maintenance_status {
  scheduled
  in_progress
  completed
  cancelled
}

Enum notification_type {
  info
  success
  warning
  error
}

Table users {
  id bigint [pk, increment]
  name varchar(120) [not null]
  email varchar(255) [not null, unique]
  phone varchar(32) [not null, default: "", note: "Unique when not empty"]
  password_hash text [not null]
  role user_role [not null, default: "customer"]
  email_verified_at timestamptz
  email_verification_code_hash text
  email_verification_expires_at timestamptz
  email_verification_sent_at timestamptz
  email_verification_attempts int [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    email [name: "idx_users_email"]
    phone [name: "idx_users_phone_unique", unique]
    email_verification_expires_at [name: "idx_users_email_verification_expires_at"]
  }
}

Table cars {
  id bigint [pk, increment]
  brand varchar(80) [not null]
  model varchar(80) [not null]
  year int [not null, note: "CHECK year >= 1900"]
  plate_number varchar(30) [not null, unique]
  daily_rate numeric(12,2) [not null, note: "CHECK daily_rate > 0"]
  status car_status [not null, default: "available"]
  image_url text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    status [name: "idx_cars_status"]
    (brand, model) [name: "idx_cars_brand_model"]
  }
}

Table rentals {
  id bigint [pk, increment]
  user_id bigint [not null]
  car_id bigint [not null]
  start_date date [not null]
  end_date date [not null, note: "CHECK end_date >= start_date"]
  total_amount numeric(12,2) [not null, note: "CHECK total_amount >= 0"]
  status rental_status [not null, default: "pending_payment"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    user_id [name: "idx_rentals_user_id"]
    car_id [name: "idx_rentals_car_id"]
    status [name: "idx_rentals_status"]
    (car_id, start_date, end_date) [name: "idx_rentals_car_dates"]
    (car_id, start_date, end_date, status) [name: "idx_rentals_availability"]
  }

  Note: "PostgreSQL exclusion constraint prevents double booking for requested, approved, pending_payment, confirmed, active rentals."
}

Table payments {
  id bigint [pk, increment]
  rental_id bigint [not null, unique]
  amount numeric(12,2) [not null, note: "CHECK amount >= 0"]
  method payment_method [not null]
  status payment_status [not null, default: "pending"]
  paid_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    rental_id [name: "idx_payments_rental_id"]
    status [name: "idx_payments_status"]
  }
}

Table auth_tokens {
  id bigint [pk, increment]
  user_id bigint [not null]
  token_hash text [not null, unique]
  user_agent text [not null, default: ""]
  ip_address text [not null, default: ""]
  expires_at timestamptz [not null]
  revoked_at timestamptz
  last_used_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  indexes {
    user_id [name: "idx_auth_tokens_user_id"]
    token_hash [name: "idx_auth_tokens_active_hash"]
    expires_at [name: "idx_auth_tokens_expires_at"]
  }
}

Table invoices {
  id bigint [pk, increment]
  rental_id bigint [not null, unique]
  invoice_number varchar(40) [not null, unique]
  amount numeric(12,2) [not null, note: "CHECK amount >= 0"]
  status invoice_status [not null, default: "issued"]
  issued_at timestamptz [not null, default: `now()`]
  due_at timestamptz
  paid_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    rental_id [name: "idx_invoices_rental_id"]
    status [name: "idx_invoices_status"]
  }
}

Table car_maintenances {
  id bigint [pk, increment]
  car_id bigint [not null]
  start_date date [not null]
  end_date date [not null, note: "CHECK end_date >= start_date"]
  reason varchar(255) [not null]
  status maintenance_status [not null, default: "scheduled"]
  notes text [not null, default: ""]
  created_by bigint
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    car_id [name: "idx_car_maintenances_car_id"]
    status [name: "idx_car_maintenances_status"]
    (car_id, start_date, end_date) [name: "idx_car_maintenances_car_dates"]
  }

  Note: "PostgreSQL exclusion constraint prevents overlapping scheduled/in_progress maintenance per car."
}

Table notifications {
  id bigint [pk, increment]
  user_id bigint
  title varchar(160) [not null]
  message text [not null]
  type notification_type [not null, default: "info"]
  read_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  indexes {
    user_id [name: "idx_notifications_user_id"]
    (user_id, read_at) [name: "idx_notifications_unread"]
  }
}

Table permissions {
  id bigint [pk, increment]
  code varchar(80) [not null, unique]
  description text [not null, default: ""]
}

Table role_permissions {
  role user_role [not null]
  permission_id bigint [not null]

  indexes {
    (role, permission_id) [pk]
  }
}

Table audit_logs {
  id bigint [pk, increment]
  actor_id bigint
  action varchar(100) [not null]
  entity_type varchar(80) [not null]
  entity_id bigint
  metadata jsonb [not null, default: "{}"]
  ip_address varchar(80) [not null, default: ""]
  user_agent text [not null, default: ""]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    actor_id [name: "idx_audit_logs_actor_id"]
    (entity_type, entity_id) [name: "idx_audit_logs_entity"]
    created_at [name: "idx_audit_logs_created_at"]
  }
}

Ref: rentals.user_id > users.id [delete: restrict]
Ref: rentals.car_id > cars.id [delete: restrict]

Ref: payments.rental_id > rentals.id [delete: restrict]
Ref: invoices.rental_id > rentals.id [delete: restrict]

Ref: auth_tokens.user_id > users.id [delete: cascade]

Ref: car_maintenances.car_id > cars.id [delete: cascade]
Ref: car_maintenances.created_by > users.id [delete: set null]

Ref: notifications.user_id > users.id [delete: cascade]

Ref: role_permissions.permission_id > permissions.id [delete: cascade]

Ref: audit_logs.actor_id > users.id [delete: set null]
